# R-kiskaupa-s-Datathon-

./: .gitignore  LICENSE  README.md  pyproject.toml
rkiskaupas_datathon/: __init__.py  io.py  roadmap.py  sensordata.py
tests/: HM.json  test_hello.py  test_roadmap.py
