[tool.poetry]
name = "rkiskaupas-datathon"
version = "0.1.0"
description = ""
authors = ["ivan <imtambovtcev@gmail.com>"]
readme = "README.md"
packages = [{include = "rkiskaupas_datathon"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.2"
coverage = "^7.3.2"
networkx = "^3.1"
geopandas = "^0.14.0"
shapely = "^2.0.2"
matplotlib = "^3.8.0"
contextily = "^1.4.0"
pyproj = "^3.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
